# tts-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/: kokoro.rs
src/: lib.rs
src/engines/: mod.rs
src/engines/kokoro/: engine.rs  mod.rs  model.rs  phonemizer.rs  vocab.rs  voices.rs
