[package]
name = "tts-rs"
version = "2026.2.3"
edition = "2021"
description = "A Rust library for text-to-speech synthesis using the Kokoro engine"
license = "MIT"
repository = "https://github.com/rishiskhare/tts-rs"

[features]
default = []

# TTS engines
kokoro = ["dep:ort", "dep:ndarray", "dep:zip"]

[dependencies]
# Always required
hound = "3.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.28"
env_logger = "0.10.0"
thiserror = "2.0.16"
derive_builder = { version = "0.20.2" }

# Kokoro (ONNX-based)
ort = { version = "2.0.0-rc.10", optional = true }
ndarray = { version = "0.17", optional = true }
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }

[[example]]
name = "kokoro"
required-features = ["kokoro"]
